lab3/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> start
Rule 1     start -> struct
Rule 2     start -> start struct
Rule 3     start -> { start }
Rule 4     start -> start { start }
Rule 5     struct -> expr ;
Rule 6     struct -> cond_expr
Rule 7     struct -> instruction
Rule 8     loop_start -> loop_struct
Rule 9     loop_start -> loop_start loop_struct
Rule 10    loop_start -> { loop_start }
Rule 11    loop_start -> loop_start { loop_start }
Rule 12    loop_struct -> expr ;
Rule 13    loop_struct -> loop_cond_expr
Rule 14    loop_struct -> loop_instruction
Rule 15    expr -> INTNUM
Rule 16    expr -> FLOATNUM
Rule 17    expr -> STRING
Rule 18    expr -> lvalue
Rule 19    expr -> ( expr )
Rule 20    expr -> - expr
Rule 21    expr -> expr '
Rule 22    array_interior -> array_interior , expr
Rule 23    array_interior -> expr
Rule 24    expr -> [ array_interior ]
Rule 25    lvalue -> ID
Rule 26    lvalue -> ID [ expr ]
Rule 27    lvalue -> ID [ expr , expr ]
Rule 28    expr -> lvalue = expr
Rule 29    expr -> lvalue PLUSASSIGN expr
Rule 30    expr -> lvalue MINASSIGN expr
Rule 31    expr -> lvalue MULTASSIGN expr
Rule 32    expr -> lvalue DIVASSIGN expr
Rule 33    expr -> lvalue = ZEROS ( expr )
Rule 34    expr -> lvalue = ONES ( expr )
Rule 35    expr -> lvalue = EYE ( expr )
Rule 36    expr -> expr + expr
Rule 37    expr -> expr - expr
Rule 38    expr -> expr * expr
Rule 39    expr -> expr / expr
Rule 40    expr -> expr MPLUS expr
Rule 41    expr -> expr MMINUS expr
Rule 42    expr -> expr MMLTP expr
Rule 43    expr -> expr MDIV expr
Rule 44    expr -> expr EQ expr
Rule 45    expr -> expr NEQ expr
Rule 46    expr -> expr GTEQ expr
Rule 47    expr -> expr LTEQ expr
Rule 48    expr -> expr > expr
Rule 49    expr -> expr < expr
Rule 50    cond_expr -> cond_if
Rule 51    cond_expr -> cond_while
Rule 52    cond_expr -> cond_for
Rule 53    cond_block -> struct
Rule 54    cond_block -> { start }
Rule 55    cond_if -> IF ( expr ) cond_block
Rule 56    cond_if -> cond_if ELSE cond_block
Rule 57    loop_cond_expr -> loop_cond_if
Rule 58    loop_cond_expr -> cond_while
Rule 59    loop_cond_expr -> cond_for
Rule 60    loop_cond_block -> loop_struct
Rule 61    loop_cond_block -> { loop_start }
Rule 62    loop_cond_if -> IF ( expr ) loop_cond_block
Rule 63    loop_cond_if -> loop_cond_if ELSE loop_cond_block
Rule 64    cond_while -> WHILE ( expr ) loop_cond_block
Rule 65    cond_for -> FOR ID = expr : expr loop_cond_block
Rule 66    instruction -> RETURN expr ;
Rule 67    instruction -> PRINT array_interior ;
Rule 68    loop_instruction -> BREAK ;
Rule 69    loop_instruction -> CONTINUE ;
Rule 70    loop_instruction -> RETURN expr ;
Rule 71    loop_instruction -> PRINT array_interior ;

Terminals, with rules where they appear

'                    : 21
(                    : 19 33 34 35 55 62 64
)                    : 19 33 34 35 55 62 64
*                    : 38
+                    : 36
,                    : 22 27
-                    : 20 37
/                    : 39
:                    : 65
;                    : 5 12 66 67 68 69 70 71
<                    : 49
=                    : 28 33 34 35 65
>                    : 48
BREAK                : 68
CONTINUE             : 69
DIVASSIGN            : 32
ELSE                 : 56 63
EQ                   : 44
EYE                  : 35
FLOATNUM             : 16
FOR                  : 65
GTEQ                 : 46
ID                   : 25 26 27 65
IF                   : 55 62
INTNUM               : 15
LTEQ                 : 47
MDIV                 : 43
MINASSIGN            : 30
MMINUS               : 41
MMLTP                : 42
MPLUS                : 40
MULTASSIGN           : 31
NEQ                  : 45
ONES                 : 34
PLUSASSIGN           : 29
PRINT                : 67 71
RETURN               : 66 70
STRING               : 17
WHILE                : 64
ZEROS                : 33
[                    : 24 26 27
]                    : 24 26 27
error                : 
{                    : 3 4 10 11 54 61
}                    : 3 4 10 11 54 61

Nonterminals, with rules where they appear

array_interior       : 22 24 67 71
cond_block           : 55 56
cond_expr            : 6
cond_for             : 52 59
cond_if              : 50 56
cond_while           : 51 58
expr                 : 5 12 19 20 21 22 23 26 27 27 28 29 30 31 32 33 34 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 55 62 64 65 65 66 70
instruction          : 7
loop_cond_block      : 62 63 64 65
loop_cond_expr       : 13
loop_cond_if         : 57 63
loop_instruction     : 14
loop_start           : 9 10 11 11 61
loop_struct          : 8 9 60
lvalue               : 18 28 29 30 31 32 33 34 35
start                : 2 3 4 4 54 0
struct               : 1 2 53

Parsing method: LALR

state 0

    (0) S' -> . start
    (1) start -> . struct
    (2) start -> . start struct
    (3) start -> . { start }
    (4) start -> . start { start }
    (5) struct -> . expr ;
    (6) struct -> . cond_expr
    (7) struct -> . instruction
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . lvalue
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (28) expr -> . lvalue = expr
    (29) expr -> . lvalue PLUSASSIGN expr
    (30) expr -> . lvalue MINASSIGN expr
    (31) expr -> . lvalue MULTASSIGN expr
    (32) expr -> . lvalue DIVASSIGN expr
    (33) expr -> . lvalue = ZEROS ( expr )
    (34) expr -> . lvalue = ONES ( expr )
    (35) expr -> . lvalue = EYE ( expr )
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MMLTP expr
    (43) expr -> . expr MDIV expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr GTEQ expr
    (47) expr -> . expr LTEQ expr
    (48) expr -> . expr > expr
    (49) expr -> . expr < expr
    (50) cond_expr -> . cond_if
    (51) cond_expr -> . cond_while
    (52) cond_expr -> . cond_for
    (66) instruction -> . RETURN expr ;
    (67) instruction -> . PRINT array_interior ;
    (25) lvalue -> . ID
    (26) lvalue -> . ID [ expr ]
    (27) lvalue -> . ID [ expr , expr ]
    (55) cond_if -> . IF ( expr ) cond_block
    (56) cond_if -> . cond_if ELSE cond_block
    (64) cond_while -> . WHILE ( expr ) loop_cond_block
    (65) cond_for -> . FOR ID = expr : expr loop_cond_block

    {               shift and go to state 3
    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22

    start                          shift and go to state 1
    struct                         shift and go to state 2
    expr                           shift and go to state 4
    cond_expr                      shift and go to state 5
    instruction                    shift and go to state 6
    lvalue                         shift and go to state 10
    cond_if                        shift and go to state 14
    cond_while                     shift and go to state 15
    cond_for                       shift and go to state 16

state 1

    (0) S' -> start .
    (2) start -> start . struct
    (4) start -> start . { start }
    (5) struct -> . expr ;
    (6) struct -> . cond_expr
    (7) struct -> . instruction
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . lvalue
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (28) expr -> . lvalue = expr
    (29) expr -> . lvalue PLUSASSIGN expr
    (30) expr -> . lvalue MINASSIGN expr
    (31) expr -> . lvalue MULTASSIGN expr
    (32) expr -> . lvalue DIVASSIGN expr
    (33) expr -> . lvalue = ZEROS ( expr )
    (34) expr -> . lvalue = ONES ( expr )
    (35) expr -> . lvalue = EYE ( expr )
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MMLTP expr
    (43) expr -> . expr MDIV expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr GTEQ expr
    (47) expr -> . expr LTEQ expr
    (48) expr -> . expr > expr
    (49) expr -> . expr < expr
    (50) cond_expr -> . cond_if
    (51) cond_expr -> . cond_while
    (52) cond_expr -> . cond_for
    (66) instruction -> . RETURN expr ;
    (67) instruction -> . PRINT array_interior ;
    (25) lvalue -> . ID
    (26) lvalue -> . ID [ expr ]
    (27) lvalue -> . ID [ expr , expr ]
    (55) cond_if -> . IF ( expr ) cond_block
    (56) cond_if -> . cond_if ELSE cond_block
    (64) cond_while -> . WHILE ( expr ) loop_cond_block
    (65) cond_for -> . FOR ID = expr : expr loop_cond_block

    {               shift and go to state 24
    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22

    struct                         shift and go to state 23
    expr                           shift and go to state 4
    cond_expr                      shift and go to state 5
    instruction                    shift and go to state 6
    lvalue                         shift and go to state 10
    cond_if                        shift and go to state 14
    cond_while                     shift and go to state 15
    cond_for                       shift and go to state 16

state 2

    (1) start -> struct .

    {               reduce using rule 1 (start -> struct .)
    INTNUM          reduce using rule 1 (start -> struct .)
    FLOATNUM        reduce using rule 1 (start -> struct .)
    STRING          reduce using rule 1 (start -> struct .)
    (               reduce using rule 1 (start -> struct .)
    -               reduce using rule 1 (start -> struct .)
    [               reduce using rule 1 (start -> struct .)
    RETURN          reduce using rule 1 (start -> struct .)
    PRINT           reduce using rule 1 (start -> struct .)
    ID              reduce using rule 1 (start -> struct .)
    IF              reduce using rule 1 (start -> struct .)
    WHILE           reduce using rule 1 (start -> struct .)
    FOR             reduce using rule 1 (start -> struct .)
    $end            reduce using rule 1 (start -> struct .)
    }               reduce using rule 1 (start -> struct .)


state 3

    (3) start -> { . start }
    (1) start -> . struct
    (2) start -> . start struct
    (3) start -> . { start }
    (4) start -> . start { start }
    (5) struct -> . expr ;
    (6) struct -> . cond_expr
    (7) struct -> . instruction
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . lvalue
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (28) expr -> . lvalue = expr
    (29) expr -> . lvalue PLUSASSIGN expr
    (30) expr -> . lvalue MINASSIGN expr
    (31) expr -> . lvalue MULTASSIGN expr
    (32) expr -> . lvalue DIVASSIGN expr
    (33) expr -> . lvalue = ZEROS ( expr )
    (34) expr -> . lvalue = ONES ( expr )
    (35) expr -> . lvalue = EYE ( expr )
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MMLTP expr
    (43) expr -> . expr MDIV expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr GTEQ expr
    (47) expr -> . expr LTEQ expr
    (48) expr -> . expr > expr
    (49) expr -> . expr < expr
    (50) cond_expr -> . cond_if
    (51) cond_expr -> . cond_while
    (52) cond_expr -> . cond_for
    (66) instruction -> . RETURN expr ;
    (67) instruction -> . PRINT array_interior ;
    (25) lvalue -> . ID
    (26) lvalue -> . ID [ expr ]
    (27) lvalue -> . ID [ expr , expr ]
    (55) cond_if -> . IF ( expr ) cond_block
    (56) cond_if -> . cond_if ELSE cond_block
    (64) cond_while -> . WHILE ( expr ) loop_cond_block
    (65) cond_for -> . FOR ID = expr : expr loop_cond_block

    {               shift and go to state 3
    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    RETURN          shift and go to state 17
    PRINT           shift and go to state 18
    ID              shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    FOR             shift and go to state 22

    start                          shift and go to state 25
    struct                         shift and go to state 2
    expr                           shift and go to state 4
    cond_expr                      shift and go to state 5
    instruction                    shift and go to state 6
    lvalue                         shift and go to state 10
    cond_if                        shift and go to state 14
    cond_while                     shift and go to state 15
    cond_for                       shift and go to state 16

state 4

    (5) struct -> expr . ;
    (21) expr -> expr . '
    (36) expr -> expr . + expr
    (37) expr -> expr . - expr
    (38) expr -> expr . * expr
    (39) expr -> expr . / expr
    (40) expr -> expr . MPLUS expr
    (41) expr -> expr . MMINUS expr
    (42) expr -> expr . MMLTP expr
    (43) expr -> expr . MDIV expr
    (44) expr -> expr . EQ expr
    (45) expr -> expr . NEQ expr
    (46) expr -> expr . GTEQ expr
    (47) expr -> expr . LTEQ expr
    (48) expr -> expr . > expr
    (49) expr -> expr . < expr

    ;               shift and go to state 26
    '               shift and go to state 27
    +               shift and go to state 28
    -               shift and go to state 29
    *               shift and go to state 30
    /               shift and go to state 31
    MPLUS           shift and go to state 32
    MMINUS          shift and go to state 33
    MMLTP           shift and go to state 34
    MDIV            shift and go to state 35
    EQ              shift and go to state 36
    NEQ             shift and go to state 37
    GTEQ            shift and go to state 38
    LTEQ            shift and go to state 39
    >               shift and go to state 40
    <               shift and go to state 41


state 5

    (6) struct -> cond_expr .

    {               reduce using rule 6 (struct -> cond_expr .)
    INTNUM          reduce using rule 6 (struct -> cond_expr .)
    FLOATNUM        reduce using rule 6 (struct -> cond_expr .)
    STRING          reduce using rule 6 (struct -> cond_expr .)
    (               reduce using rule 6 (struct -> cond_expr .)
    -               reduce using rule 6 (struct -> cond_expr .)
    [               reduce using rule 6 (struct -> cond_expr .)
    RETURN          reduce using rule 6 (struct -> cond_expr .)
    PRINT           reduce using rule 6 (struct -> cond_expr .)
    ID              reduce using rule 6 (struct -> cond_expr .)
    IF              reduce using rule 6 (struct -> cond_expr .)
    WHILE           reduce using rule 6 (struct -> cond_expr .)
    FOR             reduce using rule 6 (struct -> cond_expr .)
    $end            reduce using rule 6 (struct -> cond_expr .)
    }               reduce using rule 6 (struct -> cond_expr .)
    ELSE            reduce using rule 6 (struct -> cond_expr .)


state 6

    (7) struct -> instruction .

    {               reduce using rule 7 (struct -> instruction .)
    INTNUM          reduce using rule 7 (struct -> instruction .)
    FLOATNUM        reduce using rule 7 (struct -> instruction .)
    STRING          reduce using rule 7 (struct -> instruction .)
    (               reduce using rule 7 (struct -> instruction .)
    -               reduce using rule 7 (struct -> instruction .)
    [               reduce using rule 7 (struct -> instruction .)
    RETURN          reduce using rule 7 (struct -> instruction .)
    PRINT           reduce using rule 7 (struct -> instruction .)
    ID              reduce using rule 7 (struct -> instruction .)
    IF              reduce using rule 7 (struct -> instruction .)
    WHILE           reduce using rule 7 (struct -> instruction .)
    FOR             reduce using rule 7 (struct -> instruction .)
    $end            reduce using rule 7 (struct -> instruction .)
    }               reduce using rule 7 (struct -> instruction .)
    ELSE            reduce using rule 7 (struct -> instruction .)


state 7

    (15) expr -> INTNUM .

    ;               reduce using rule 15 (expr -> INTNUM .)
    '               reduce using rule 15 (expr -> INTNUM .)
    +               reduce using rule 15 (expr -> INTNUM .)
    -               reduce using rule 15 (expr -> INTNUM .)
    *               reduce using rule 15 (expr -> INTNUM .)
    /               reduce using rule 15 (expr -> INTNUM .)
    MPLUS           reduce using rule 15 (expr -> INTNUM .)
    MMINUS          reduce using rule 15 (expr -> INTNUM .)
    MMLTP           reduce using rule 15 (expr -> INTNUM .)
    MDIV            reduce using rule 15 (expr -> INTNUM .)
    EQ              reduce using rule 15 (expr -> INTNUM .)
    NEQ             reduce using rule 15 (expr -> INTNUM .)
    GTEQ            reduce using rule 15 (expr -> INTNUM .)
    LTEQ            reduce using rule 15 (expr -> INTNUM .)
    >               reduce using rule 15 (expr -> INTNUM .)
    <               reduce using rule 15 (expr -> INTNUM .)
    )               reduce using rule 15 (expr -> INTNUM .)
    ]               reduce using rule 15 (expr -> INTNUM .)
    ,               reduce using rule 15 (expr -> INTNUM .)
    :               reduce using rule 15 (expr -> INTNUM .)
    {               reduce using rule 15 (expr -> INTNUM .)
    INTNUM          reduce using rule 15 (expr -> INTNUM .)
    FLOATNUM        reduce using rule 15 (expr -> INTNUM .)
    STRING          reduce using rule 15 (expr -> INTNUM .)
    (               reduce using rule 15 (expr -> INTNUM .)
    [               reduce using rule 15 (expr -> INTNUM .)
    BREAK           reduce using rule 15 (expr -> INTNUM .)
    CONTINUE        reduce using rule 15 (expr -> INTNUM .)
    RETURN          reduce using rule 15 (expr -> INTNUM .)
    PRINT           reduce using rule 15 (expr -> INTNUM .)
    ID              reduce using rule 15 (expr -> INTNUM .)
    IF              reduce using rule 15 (expr -> INTNUM .)
    WHILE           reduce using rule 15 (expr -> INTNUM .)
    FOR             reduce using rule 15 (expr -> INTNUM .)


state 8

    (16) expr -> FLOATNUM .

    ;               reduce using rule 16 (expr -> FLOATNUM .)
    '               reduce using rule 16 (expr -> FLOATNUM .)
    +               reduce using rule 16 (expr -> FLOATNUM .)
    -               reduce using rule 16 (expr -> FLOATNUM .)
    *               reduce using rule 16 (expr -> FLOATNUM .)
    /               reduce using rule 16 (expr -> FLOATNUM .)
    MPLUS           reduce using rule 16 (expr -> FLOATNUM .)
    MMINUS          reduce using rule 16 (expr -> FLOATNUM .)
    MMLTP           reduce using rule 16 (expr -> FLOATNUM .)
    MDIV            reduce using rule 16 (expr -> FLOATNUM .)
    EQ              reduce using rule 16 (expr -> FLOATNUM .)
    NEQ             reduce using rule 16 (expr -> FLOATNUM .)
    GTEQ            reduce using rule 16 (expr -> FLOATNUM .)
    LTEQ            reduce using rule 16 (expr -> FLOATNUM .)
    >               reduce using rule 16 (expr -> FLOATNUM .)
    <               reduce using rule 16 (expr -> FLOATNUM .)
    )               reduce using rule 16 (expr -> FLOATNUM .)
    ]               reduce using rule 16 (expr -> FLOATNUM .)
    ,               reduce using rule 16 (expr -> FLOATNUM .)
    :               reduce using rule 16 (expr -> FLOATNUM .)
    {               reduce using rule 16 (expr -> FLOATNUM .)
    INTNUM          reduce using rule 16 (expr -> FLOATNUM .)
    FLOATNUM        reduce using rule 16 (expr -> FLOATNUM .)
    STRING          reduce using rule 16 (expr -> FLOATNUM .)
    (               reduce using rule 16 (expr -> FLOATNUM .)
    [               reduce using rule 16 (expr -> FLOATNUM .)
    BREAK           reduce using rule 16 (expr -> FLOATNUM .)
    CONTINUE        reduce using rule 16 (expr -> FLOATNUM .)
    RETURN          reduce using rule 16 (expr -> FLOATNUM .)
    PRINT           reduce using rule 16 (expr -> FLOATNUM .)
    ID              reduce using rule 16 (expr -> FLOATNUM .)
    IF              reduce using rule 16 (expr -> FLOATNUM .)
    WHILE           reduce using rule 16 (expr -> FLOATNUM .)
    FOR             reduce using rule 16 (expr -> FLOATNUM .)


state 9

    (17) expr -> STRING .

    ;               reduce using rule 17 (expr -> STRING .)
    '               reduce using rule 17 (expr -> STRING .)
    +               reduce using rule 17 (expr -> STRING .)
    -               reduce using rule 17 (expr -> STRING .)
    *               reduce using rule 17 (expr -> STRING .)
    /               reduce using rule 17 (expr -> STRING .)
    MPLUS           reduce using rule 17 (expr -> STRING .)
    MMINUS          reduce using rule 17 (expr -> STRING .)
    MMLTP           reduce using rule 17 (expr -> STRING .)
    MDIV            reduce using rule 17 (expr -> STRING .)
    EQ              reduce using rule 17 (expr -> STRING .)
    NEQ             reduce using rule 17 (expr -> STRING .)
    GTEQ            reduce using rule 17 (expr -> STRING .)
    LTEQ            reduce using rule 17 (expr -> STRING .)
    >               reduce using rule 17 (expr -> STRING .)
    <               reduce using rule 17 (expr -> STRING .)
    )               reduce using rule 17 (expr -> STRING .)
    ]               reduce using rule 17 (expr -> STRING .)
    ,               reduce using rule 17 (expr -> STRING .)
    :               reduce using rule 17 (expr -> STRING .)
    {               reduce using rule 17 (expr -> STRING .)
    INTNUM          reduce using rule 17 (expr -> STRING .)
    FLOATNUM        reduce using rule 17 (expr -> STRING .)
    STRING          reduce using rule 17 (expr -> STRING .)
    (               reduce using rule 17 (expr -> STRING .)
    [               reduce using rule 17 (expr -> STRING .)
    BREAK           reduce using rule 17 (expr -> STRING .)
    CONTINUE        reduce using rule 17 (expr -> STRING .)
    RETURN          reduce using rule 17 (expr -> STRING .)
    PRINT           reduce using rule 17 (expr -> STRING .)
    ID              reduce using rule 17 (expr -> STRING .)
    IF              reduce using rule 17 (expr -> STRING .)
    WHILE           reduce using rule 17 (expr -> STRING .)
    FOR             reduce using rule 17 (expr -> STRING .)


state 10

    (18) expr -> lvalue .
    (28) expr -> lvalue . = expr
    (29) expr -> lvalue . PLUSASSIGN expr
    (30) expr -> lvalue . MINASSIGN expr
    (31) expr -> lvalue . MULTASSIGN expr
    (32) expr -> lvalue . DIVASSIGN expr
    (33) expr -> lvalue . = ZEROS ( expr )
    (34) expr -> lvalue . = ONES ( expr )
    (35) expr -> lvalue . = EYE ( expr )

    ;               reduce using rule 18 (expr -> lvalue .)
    '               reduce using rule 18 (expr -> lvalue .)
    +               reduce using rule 18 (expr -> lvalue .)
    -               reduce using rule 18 (expr -> lvalue .)
    *               reduce using rule 18 (expr -> lvalue .)
    /               reduce using rule 18 (expr -> lvalue .)
    MPLUS           reduce using rule 18 (expr -> lvalue .)
    MMINUS          reduce using rule 18 (expr -> lvalue .)
    MMLTP           reduce using rule 18 (expr -> lvalue .)
    MDIV            reduce using rule 18 (expr -> lvalue .)
    EQ              reduce using rule 18 (expr -> lvalue .)
    NEQ             reduce using rule 18 (expr -> lvalue .)
    GTEQ            reduce using rule 18 (expr -> lvalue .)
    LTEQ            reduce using rule 18 (expr -> lvalue .)
    >               reduce using rule 18 (expr -> lvalue .)
    <               reduce using rule 18 (expr -> lvalue .)
    )               reduce using rule 18 (expr -> lvalue .)
    ]               reduce using rule 18 (expr -> lvalue .)
    ,               reduce using rule 18 (expr -> lvalue .)
    :               reduce using rule 18 (expr -> lvalue .)
    {               reduce using rule 18 (expr -> lvalue .)
    INTNUM          reduce using rule 18 (expr -> lvalue .)
    FLOATNUM        reduce using rule 18 (expr -> lvalue .)
    STRING          reduce using rule 18 (expr -> lvalue .)
    (               reduce using rule 18 (expr -> lvalue .)
    [               reduce using rule 18 (expr -> lvalue .)
    BREAK           reduce using rule 18 (expr -> lvalue .)
    CONTINUE        reduce using rule 18 (expr -> lvalue .)
    RETURN          reduce using rule 18 (expr -> lvalue .)
    PRINT           reduce using rule 18 (expr -> lvalue .)
    ID              reduce using rule 18 (expr -> lvalue .)
    IF              reduce using rule 18 (expr -> lvalue .)
    WHILE           reduce using rule 18 (expr -> lvalue .)
    FOR             reduce using rule 18 (expr -> lvalue .)
    =               shift and go to state 42
    PLUSASSIGN      shift and go to state 43
    MINASSIGN       shift and go to state 44
    MULTASSIGN      shift and go to state 45
    DIVASSIGN       shift and go to state 46


state 11

    (19) expr -> ( . expr )
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . lvalue
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (28) expr -> . lvalue = expr
    (29) expr -> . lvalue PLUSASSIGN expr
    (30) expr -> . lvalue MINASSIGN expr
    (31) expr -> . lvalue MULTASSIGN expr
    (32) expr -> . lvalue DIVASSIGN expr
    (33) expr -> . lvalue = ZEROS ( expr )
    (34) expr -> . lvalue = ONES ( expr )
    (35) expr -> . lvalue = EYE ( expr )
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MMLTP expr
    (43) expr -> . expr MDIV expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr GTEQ expr
    (47) expr -> . expr LTEQ expr
    (48) expr -> . expr > expr
    (49) expr -> . expr < expr
    (25) lvalue -> . ID
    (26) lvalue -> . ID [ expr ]
    (27) lvalue -> . ID [ expr , expr ]

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    ID              shift and go to state 19

    expr                           shift and go to state 47
    lvalue                         shift and go to state 10

state 12

    (20) expr -> - . expr
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . lvalue
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (28) expr -> . lvalue = expr
    (29) expr -> . lvalue PLUSASSIGN expr
    (30) expr -> . lvalue MINASSIGN expr
    (31) expr -> . lvalue MULTASSIGN expr
    (32) expr -> . lvalue DIVASSIGN expr
    (33) expr -> . lvalue = ZEROS ( expr )
    (34) expr -> . lvalue = ONES ( expr )
    (35) expr -> . lvalue = EYE ( expr )
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MMLTP expr
    (43) expr -> . expr MDIV expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr GTEQ expr
    (47) expr -> . expr LTEQ expr
    (48) expr -> . expr > expr
    (49) expr -> . expr < expr
    (25) lvalue -> . ID
    (26) lvalue -> . ID [ expr ]
    (27) lvalue -> . ID [ expr , expr ]

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    ID              shift and go to state 19

    expr                           shift and go to state 48
    lvalue                         shift and go to state 10

state 13

    (24) expr -> [ . array_interior ]
    (22) array_interior -> . array_interior , expr
    (23) array_interior -> . expr
    (15) expr -> . INTNUM
    (16) expr -> . FLOATNUM
    (17) expr -> . STRING
    (18) expr -> . lvalue
    (19) expr -> . ( expr )
    (20) expr -> . - expr
    (21) expr -> . expr '
    (24) expr -> . [ array_interior ]
    (28) expr -> . lvalue = expr
    (29) expr -> . lvalue PLUSASSIGN expr
    (30) expr -> . lvalue MINASSIGN expr
    (31) expr -> . lvalue MULTASSIGN expr
    (32) expr -> . lvalue DIVASSIGN expr
    (33) expr -> . lvalue = ZEROS ( expr )
    (34) expr -> . lvalue = ONES ( expr )
    (35) expr -> . lvalue = EYE ( expr )
    (36) expr -> . expr + expr
    (37) expr -> . expr - expr
    (38) expr -> . expr * expr
    (39) expr -> . expr / expr
    (40) expr -> . expr MPLUS expr
    (41) expr -> . expr MMINUS expr
    (42) expr -> . expr MMLTP expr
    (43) expr -> . expr MDIV expr
    (44) expr -> . expr EQ expr
    (45) expr -> . expr NEQ expr
    (46) expr -> . expr GTEQ expr
    (47) expr -> . expr LTEQ expr
    (48) expr -> . expr > expr
    (49) expr -> . expr < expr
    (25) lvalue -> . ID
    (26) lvalue -> . ID [ expr ]
    (27) lvalue -> . ID [ expr , expr ]

    INTNUM          shift and go to state 7
    FLOATNUM        shift and go to state 8
    STRING          shift and go to state 9
    (               shift and go to state 11
    -               shift and go to state 12
    [               shift and go to state 13
    ID              shift and go to state 19

    array_interior                 shift and go to state 49
    expr                           shift and go to state 50
    lvalue                         shift and go to state 10

state 14

    (50) cond_expr -> cond_if .
    (56) cond_if -> cond_if . ELSE cond_block

  ! shift/reduce conflict for ELSE resolved as shift
    {               reduce using rule 50 (cond_expr -> cond_if .)
    INTNUM          reduce using rule 50 (cond_expr -> cond_if .)
    FLOATNUM        reduce using rule 50 (cond_expr -> cond_if .)
    STRING          reduce using rule 50 (cond_expr -> cond_if .)
    (               reduce using rule 50 (cond_expr -> cond_if .)
    -               reduce using rule 50 (cond_expr -> cond_if .)
    [               reduce using rule 50 (cond_expr -> cond_if .)
    RETURN          reduce using rule 50 (cond_expr -> cond_if .)
    PRINT           reduce using rule 50 (cond_expr -> cond_if .)
    ID              reduce using rule 50 (cond_expr -> cond_if .)
    IF              reduce using rule 50 (cond_expr -> cond_if .)
    WHILE           reduce using rule 50 (cond_expr -> cond_if .)
    FOR             reduce using rule 50 (cond_expr -> cond_if .)
    $end            reduce using rule 50 (cond_expr -> cond_if .)
    }               reduce using rule 50 (cond_expr -> cond_if .)
    ELSE            shift and go to state 51

  ! ELSE            [ reduce using rule 50 (cond_expr -> cond_if .) ]


state 15

    (51) cond_expr -> cond_while .
